Copy basic widget implementation
This was yanked from CLEMCLAM circa June 2021, without any attempt to
refactor or cleanup as a standalone widget, only with unnecessary
integrations removed.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,10 +32,21 @@ python_requires = >=3.7
 setup_requires = setuptools_scm
 # add your package requirements here
 install_requires =
+    ffmpeg-python>=0.2.0
+    napari
     napari-plugin-engine>=0.1.4
     numpy
 
 
 [options.entry_points] 
 napari.plugin = 
-    napari-simple-3d-animation = napari_simple_3d_animation
+    simple-3d-animation = napari_simple_3d_animation
+[options.extras_require]
+dev =
+    black
+    napari
+    magicgui
+    pytest-qt
+    qtpy
+    pyqt5
+    pytest
